# click-odoo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .towncrier-template.rst  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  odoo.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
click_odoo/: __init__.py  cli.py  compat.py  config.py  console.py  env.py  env_options.py  options.py
newsfragments/: 36.feature  43.feature  48.removal  57.bugfix  60.feature  70.feature
odoo_script/: __init__.py  cli.py  console.py  env.py
tests/: conftest.py  test_click_odoo.py  test_odoo_script.py
tests/data/addons/addon1/: __manifest__.py  __openerp__.py
tests/scripts/: install_odoo.py  script1.py  script2.py  script3.py  script4.py  script5.py  script6.py  sql_db-8.patch
