[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
    template = ".towncrier-template.rst"
    underlines = ["-"]
    title_format = "{version} ({project_date})"
    issue_format = "`#{issue} <https://github.com/acsone/click-odoo/issues/{issue}>`_"
    directory = "newsfragments/"
    filename = "CHANGES.rst"
